<resources>
    <string name="app_name">Lab06</string>
    <string name="casa1">TODO</string>
    <string name="todo">TODO</string>
    <string name="libary">TODO</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="buscar">Search</string>
    <string name="lib">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">Good Morning</string>
    <string name="diego_jose_valdez_soto">Diego Jose Valdez Soto</string>
    <string name="top_genres">Top genres</string>
    <string name="pop">Pop</string>
    <string name="reggaetton">Reggaetton</string>
    <string name="rock">Rock</string>
    <string name="rap">Rap</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="your_library">Your Library</string>
    <string name="lupa">Lupa</string>
    <string name="user">User</string>
    <string name="suma">suma</string>
    <string name="most_recent">most recent</string>
    <string name="liked">liked</string>
    <string name="most_recent1">Most Recent</string>
    <string name="flechitas">TODO</string>
</resources>