<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18171c"
    tools:context=".Fragment3">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="143dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/your_library"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="49dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/lupa"
            android:src="@drawable/images2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="65dp"
            android:layout_height="61dp"
            android:src="@drawable/buena"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/user" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="40dp"
            android:layout_height="51dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/suma"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/suma" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="99dp"
            android:layout_height="23dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/most_recent1"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="87dp"
            android:layout_height="73dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:contentDescription="@string/liked" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/liked_songs"
            android:textColor="@color/white"
            android:fontFamily="@font/gothambook"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="25dp"
            android:layout_height="23dp"
            android:layout_marginTop="68dp"
            android:rotation="90"
            android:src="@drawable/ic_baseline_compare_arrows_24"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/flechitas" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
