<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18171c"
    tools:context="MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentConainer"
        android:layout_width="433dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="98dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/casa"
        android:contentDescription="@string/casa1" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="98dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:srcCompat="@drawable/images2"
        android:contentDescription="@string/todo" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="101dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        android:contentDescription="@string/libary" />

    <Button
        android:id="@+id/button5"
        android:layout_width="124dp"
        android:layout_height="290dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="512dp"
        android:background="18171c"
        android:fontFamily="@font/gothabold"
        android:text="@string/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="124dp"
        android:layout_height="290dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="512dp"
        android:background="18171c"
        android:fontFamily="@font/gothabold"
        android:text="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="124dp"
        android:layout_height="290dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="512dp"
        android:background="18171c"
        android:fontFamily="@font/gothabold"
        android:text="@string/lib"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>