<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18171c"
    tools:context=".Fragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="81dp"
            android:layout_height="31dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="227dp"
            android:layout_height="75dp"
            android:fontFamily="@font/gothambook"
            android:text="@string/top_genres"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/button1"
            android:layout_width="179dp"
            android:layout_height="139dp"
            android:layout_marginTop="152dp"
            android:backgroundTint="#FD6161"
            android:fontFamily="@font/gothambook"
            android:gravity="start"
            android:text="@string/pop"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button2"
            android:layout_width="179dp"
            android:layout_height="139dp"
            android:backgroundTint="#6c4675"
            android:fontFamily="@font/gothambook"
            android:gravity="start"
            android:text="@string/reggaetton"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="179dp"
            android:layout_height="139dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#808080"
            android:fontFamily="@font/gothambook"
            android:gravity="start"
            android:text="@string/rock"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="179dp"
            android:layout_height="139dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="#e51a4c"
            android:fontFamily="@font/gothambook"
            android:gravity="start"
            android:text="@string/rap"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>